<resources>
    <string name="app_name">BottomMainMenu</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="favorites">Favorites</string>
    <string name="account">Account</string>
    <string name="main">Main</string>
    <string name="video">Video</string>
    <string name="location">Location</string>
    <string name="setting">Setting</string>
    <string name="contacts">Contacts</string>
    <string name="helps">Helps</string>
    <string name="coffee_shop">Coffee Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="catalog">Catalog</string>
    <string name="delivery">Delivery</string>
    <string name="duration_movies">Duration: 108min</string>
    <string name="name_actors">Arnold\nSchwarzeneger\nand\nLinda Hamilton</string>
    <string name="terminator">Terminator</string>

</resources>