<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">

        <item
            android:id="@+id/homeMenu"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/shopMenu"
            android:icon="@drawable/ic_shop"
            android:title="@string/shop"/>
        <item
            android:id="@+id/favoritesMenu"
            android:icon="@drawable/ic_favorites"
            android:title="@string/favorites"/>
        <item
            android:id="@+id/accountMenu"
            android:icon="@drawable/ic_account"
            android:title="@string/account"/>
    </group>

    <item
        android:title="@string/main">
        <menu>

            <item android:id="@+id/videoMenu"
                android:icon="@drawable/ic_video"
                android:title="@string/video"/>

            <item android:id="@+id/locationMenu"
                android:icon="@drawable/ic_location"
                android:title="@string/location"/>

            <item android:id="@+id/settingsMenu"
                android:icon="@drawable/ic_settings"
                android:title="@string/setting"/>

        </menu>
    </item>

    <item android:title="@string/contacts">

        <menu>
            <item
                android:id="@+id/contactsMenu"
                android:icon="@drawable/ic_contacts"
                android:title="@string/contacts"/>

            <item
                android:id="@+id/helpsMenu"
                android:icon="@drawable/ic_helps"
                android:title="@string/helps"/>

        </menu>

    </item>

</menu>