<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


   <com.google.android.material.appbar.MaterialToolbar
       android:id="@+id/top_app_bar"
       android:layout_width="match_parent"
       android:layout_height="?actionBarSize"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:menu="@menu/top_menu"
       app:navigationIcon="@drawable/ic_menu"
       android:background="@android:color/holo_blue_dark"
       app:title="@string/coffee_shop"
       style="@style/Widget.MaterialComponents.Toolbar.Primary">

   </com.google.android.material.appbar.MaterialToolbar>

   <FrameLayout
       android:id="@+id/content"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       app:layout_constraintBottom_toTopOf="@id/bottomNavView"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/top_app_bar"
       android:background="@android:color/holo_orange_dark"/>

   <com.google.android.material.bottomnavigation.BottomNavigationView
       android:id="@+id/bottomNavView"
       android:layout_width="match_parent"
       android:layout_height="?actionBarSize"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:menu="@menu/bottom_nav_menu"
       android:background="@color/dark_blue"
       android:elevation="@dimen/elevation_card"
       app:itemIconTint="@color/bottom_nav_color"
       app:itemTextColor="@color/bottom_nav_color"
       />

   <com.google.android.material.card.MaterialCardView
       android:id="@+id/cardMovies"
       android:layout_width="match_parent"
       android:layout_height="300dp"
       app:strokeColor="@color/purple_200"
       android:focusable="true"
       app:strokeWidth="3dp"
       android:checkable="true"
       android:clickable="true"
       app:checkedIcon="@drawable/ic_exit"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/top_app_bar"

       >

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:fitsSystemWindows="false">

         <ImageView
             android:id="@+id/imMovies"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
             android:src="@drawable/terminator"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />

         <TextView
             android:id="@+id/tvMoviesDuration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="140dp"
             android:layout_marginStart="4dp"
             android:text="@string/duration_movies"
             android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="@+id/imMovies"
             app:layout_constraintTop_toTopOf="parent" />

         <TextView
             android:id="@+id/tvMoviesActors"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/name_actors"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="4dp"
             android:textStyle="italic"/>

         <TextView
             android:id="@+id/tvMoviesTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/terminator"
             android:textColor="@color/red"
             android:textSize="23sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="4dp"
             android:layout_marginBottom="4dp"
             android:textStyle="italic"/>


      </androidx.constraintlayout.widget.ConstraintLayout>

   </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>