<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:background="@color/black">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardMovies"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:strokeColor="@color/purple_200"
        android:focusable="true"
        app:strokeWidth="3dp"
        android:checkable="true"
        android:clickable="true"
        app:checkedIcon="@drawable/ic_exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_app_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="false">

            <ImageView
                android:id="@+id/imMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/terminator"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tvMoviesDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="140dp"
                android:layout_marginStart="4dp"
                android:text="@string/duration_movies"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/imMovies"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/tvMoviesActors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_actors"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="4dp"
                android:textStyle="italic"/>

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/tvMoviesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terminator"
                android:textColor="@color/red"
                android:textSize="23sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"
                android:textStyle="italic"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    </FrameLayout>
